# traefik-to-AdGuard

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
traefiktoadguard/: app.py  runner.py
